logs/microblog.log
2024-09-02 13:12:06,033 ERROR: Exception on /register [GET] [in /home/gaia/PycharmProjects/microblog/.venv/lib/python3.12/site-packages/flask/app.py:838]
Traceback (most recent call last):
  File "/home/gaia/PycharmProjects/microblog/.venv/lib/python3.12/site-packages/flask/app.py", line 1473, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/gaia/PycharmProjects/microblog/.venv/lib/python3.12/site-packages/flask/app.py", line 882, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/gaia/PycharmProjects/microblog/.venv/lib/python3.12/site-packages/flask/app.py", line 880, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/gaia/PycharmProjects/microblog/.venv/lib/python3.12/site-packages/flask/app.py", line 865, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/gaia/PycharmProjects/microblog/app/routes.py", line 98, in register
    return render_template('register.html', title=_('Register'), form=form)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/gaia/PycharmProjects/microblog/.venv/lib/python3.12/site-packages/flask/templating.py", line 149, in render_template
    template = app.jinja_env.get_or_select_template(template_name_or_list)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/gaia/PycharmProjects/microblog/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 1084, in get_or_select_template
    return self.get_template(template_name_or_list, parent, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/gaia/PycharmProjects/microblog/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 1013, in get_template
    return self._load_template(name, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/gaia/PycharmProjects/microblog/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 972, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/gaia/PycharmProjects/microblog/.venv/lib/python3.12/site-packages/jinja2/loaders.py", line 138, in load
    code = environment.compile(source, name, filename)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/gaia/PycharmProjects/microblog/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "/home/gaia/PycharmProjects/microblog/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 939, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "/home/gaia/PycharmProjects/microblog/app/templates/register.html", line 5, in template
    <h1>{{ _('Register')_ }}</h1>
    ^^^^^^^^^^^^^^^^^^^^^^^^^
jinja2.exceptions.TemplateSyntaxError: expected token 'end of print statement', got '_'
2024-09-02 13:12:48,477 INFO: Microblog startup [in /home/gaia/PycharmProjects/microblog/app/__init__.py:54]
2024-09-02 13:14:28,996 INFO: Microblog startup [in /home/gaia/PycharmProjects/microblog/app/__init__.py:54]
2024-09-02 13:16:56,008 INFO: Microblog startup [in /home/gaia/PycharmProjects/microblog/app/__init__.py:55]
2024-09-02 13:22:03,082 INFO: Microblog startup [in /home/gaia/PycharmProjects/microblog/app/__init__.py:55]
2024-09-02 13:33:12,306 INFO: Microblog startup [in /home/gaia/PycharmProjects/microblog/app/__init__.py:55]
2024-09-02 13:35:52,261 INFO: Microblog startup [in /home/gaia/PycharmProjects/microblog/app/__init__.py:55]
2024-09-02 13:36:19,083 INFO: Microblog startup [in /home/gaia/PycharmProjects/microblog/app/__init__.py:55]
2024-09-02 13:36:52,780 INFO: Microblog startup [in /home/gaia/PycharmProjects/microblog/app/__init__.py:55]
2024-09-02 13:46:20,873 INFO: Microblog startup [in /home/gaia/PycharmProjects/microblog/app/__init__.py:55]
2024-09-02 15:35:51,659 INFO: Microblog startup [in /home/gaia/PycharmProjects/microblog/app/__init__.py:55]
2024-09-02 15:36:02,830 INFO: Microblog startup [in /home/gaia/PycharmProjects/microblog/app/__init__.py:55]
2024-09-02 15:36:17,605 INFO: Microblog startup [in /home/gaia/PycharmProjects/microblog/app/__init__.py:55]
2024-09-02 15:48:05,481 INFO: Microblog startup [in /home/gaia/PycharmProjects/microblog/app/__init__.py:55]
2024-09-02 15:48:23,020 INFO: Microblog startup [in /home/gaia/PycharmProjects/microblog/app/__init__.py:55]
2024-09-02 15:48:37,320 INFO: Microblog startup [in /home/gaia/PycharmProjects/microblog/app/__init__.py:55]
2024-09-02 15:48:58,828 INFO: Microblog startup [in /home/gaia/PycharmProjects/microblog/app/__init__.py:55]
2024-09-02 15:52:25,115 INFO: Microblog startup [in /home/gaia/PycharmProjects/microblog/app/__init__.py:55]
2024-09-02 15:52:33,375 INFO: Microblog startup [in /home/gaia/PycharmProjects/microblog/app/__init__.py:55]
2024-09-02 15:53:04,333 INFO: Microblog startup [in /home/gaia/PycharmProjects/microblog/app/__init__.py:55]
2024-09-02 15:53:11,368 INFO: Microblog startup [in /home/gaia/PycharmProjects/microblog/app/__init__.py:55]
2024-09-02 15:55:10,178 INFO: Microblog startup [in /home/gaia/PycharmProjects/microblog/app/__init__.py:55]
2024-09-02 15:55:14,859 INFO: Microblog startup [in /home/gaia/PycharmProjects/microblog/app/__init__.py:55]
2024-09-02 15:55:26,287 INFO: Microblog startup [in /home/gaia/PycharmProjects/microblog/app/__init__.py:55]
